--- a/application/config/packages/security.yaml
+++ b/application/config/packages/security.yaml
@@ -14,14 +14,14 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            # pattern: ^/
+            pattern: ^/
             anonymous: ~
             provider: user_db_provider
             form_login:
                 login_path: login
-                check_path: login2
-                target_path_parameter: address_list
-                failure_path_parameter: failed_login
+                check_path: login
+                target_path_parameter: _target_path
+                failure_path_parameter: _failed_login
                 require_previous_session: false
             logout:
                 path: /logout
@@ -39,6 +39,6 @@ security:
     access_control:
             # require ROLE_ADMIN for /admin*
             - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-            - { path: ^/login2, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/failed_login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/createuser, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-            - { path: ^/address/list, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/address/list, roles: ROLE_USER }
