--- a/application/composer.json
+++ b/application/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/console": "^4.0",
+        "symfony/expression-language": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
