--- a/application/.env.dist
+++ b/application/.env.dist
@@ -13,5 +13,5 @@ APP_SECRET=c4ebbb0a4e288c06cfb81ea8772f8ba0
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://homestead:secret@sveco.dev:3306/sveco
+DATABASE_URL=mysql://homestead:secret@sveco.test:3306/sveco
 ###< doctrine/doctrine-bundle ###
